# psychological_test_fastapi

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  models.py  routes.py
